# alterego

./: .gitignore  Cargo.toml  README.md
src/: ai.rs  application.rs  args.rs  database.rs  error.rs  main.rs  ollama.rs  save.rs  update_stream.rs  utils.rs
src/models/: basic_group_wrapper.rs  chat_llm_model.rs  chat_wrapper.rs  message_wrapper.rs  mod.rs  supergroup_wrapper.rs  user_wrapper.rs
