[package]
name = "alterego"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.77", default-features = false }
clap = { version = "4.5.1", default-features = false, features = ["std", "derive"] }
dialoguer = { version = "0.11.0", default-features = false }
env_logger = { version = "0.11", default-features = false }
futures = { version = "0.3.30", default-features = false, features = ["alloc"] }
log = { version = "0.4.20", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
reqwest = { version = "0.11.26", default-features = false, features = ["default-tls", "stream"] }
rusqlite = { version = "0.31.0", default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.114", default-features = false }
tdlib = { version = "0.10.0", default-features = false }
tokio = { version = "1.36", default-features = false, features = ["full"] }
unidecode = { version = "0.3.0", default-features = false }
